# juridical-innovation-agent

./: .gitignore  INTEGRATION_TASK.md  README.md  RELEASE_NOTES.md  docsync.yaml  pyproject.toml
.agent/skills/themis/: SKILL.md
docs/: ARTICLE.md  ARTIGO.tex  ARTIGO_PT.md  COVERAGE_ANALYSIS.md  DATA_INTEGRATION.md  DOCSYNC_INTEGRATION.md  INDEX.md  MATHEMATICAL_MODEL.md  PAPER_GENERATION_GUIDE.md
docs/legal_refs/: LEI_DA_INOVACAO_10973_04.md  LEI_DIREITOS_AUTORAIS_9610_98.md  LEI_DO_BEM_11196_05.md  LEI_DO_SOFTWARE_9609_98.md  LEI_GERAL_PROTECAO_DADOS_13709_18.md  LEI_PROPRIEDADE_INDUSTRIAL_9279_96.md  LPI_HIGHLIGHTS.md  MARCO_CIVIL_INTERNET_12965_14.md  MARCO_LEGAL_IA_PL2338.md  TRL_SCALE.md
examples/: end_to_end_paper.py  generate_greenproof_paper.py
output/: greenproof_paper_config.json  quick_test_config.json  test_paper_config.json
src/themis/: server.py
src/themis/data/: __init__.py  connectors.py  dataset_forge.py
src/themis/export/: __init__.py  figures.py  paper_exporter.py
src/themis/knowledge/: __init__.py  loader.py  vector_store.py
src/themis/reasoning/: agent.py  detector.py  optimizer.py  patterns.py
tests/: test_figures.py  test_integration.py  test_quick.py
