[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "juridical-innovation-agent"
version = "0.1.0"
description = "AI Agent specializing in Brazilian Innovation Law (LPI) and Patent Strategy"
authors = [{name = "Symbeon Labs", email = "contact@symbeon.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["legal-ai", "innovation", "patents", "lpi", "agent", "mcp"]
dependencies = [
    "pydantic>=2.0",
    "langchain>=0.1.0",
    "chromadb>=0.4.0",  # Para RAG futuro
    "tiktoken",
    "fastmcp",          # Para expor via MCP
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy"
]

[project.scripts]
themis = "themis.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
